Sat Mar 17 21:13:56 2012                        Michael Jennings (mej)

Major refactoring of the File CLI.  Consolidated and cleaned up the
code, fixed a bug that prevented "new" from working, and redid the
interactive stuff to use a new Cli object method.

Also fixed a typo in the "node" help output.

This has been tested locally and seems to work, but changes this big
may have hidden issues, so please report any problems you encounter.
:-)
----------------------------------------------------------------------
Tue Mar 20 17:56:36 2012                        Michael Jennings (mej)

Cleaned up CLI help and added some short options to the file and node
commands.

Fixed bug with FQDN handling in CLI.

Refactored and cleaned up the object command.  Now subcommands are
used just like with file and node.  This means that "object -p :all"
is now "object print -p :all" etc.  Additionally, "object dump" is now
documented and "object print" can show subobjects (e.g., netdevs).
Object members are sorted intelligently.  "object new" is no longer
allowed.

Fixed a bug in Logger that prevented multiple arguments to the
*print() functions.
----------------------------------------------------------------------
Thu Jul 26 16:04:20 2012                        Michael Jennings (mej)

Added a few RetVal unit tests to identify a hidden issue.

Fixed invocation of RetVal static methods via -> instead of ::.

Added some function return wrappers to validate or RetVal-ize
arbitrary functions' return values.
----------------------------------------------------------------------
Sat Jul 28 08:56:34 2012                        Michael Jennings (mej)

Don't assume parameters exist when they're not required.
----------------------------------------------------------------------
Wed Aug 15 14:04:38 2012                        Michael Jennings (mej)

This should be a more efficient method of computing the MD5 checksum.
----------------------------------------------------------------------